# CSE-3206-open-ended-project

./: CMakeLists.txt  README.md
include/: logger.h
src/: logger.cpp  main.cpp
test/: CMakeLists.txt  logger_test.cpp
